# common-voice

./: .dockerignore  .editorconfig  .env-local-docker  .env-local-docker.example  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .jshintrc  .node-version  .prettierignore  .prettierrc  .snyk  .travis.yml  11.6.0  AUTHORS  CODE_OF_CONDUCT.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Congolese_swahili_v1.txt  HOWOTO_S3.md  Japanese-sentence-submission.txt  Odia-Sentences-2023-06-03.tsv  README.md  REPORTING.md  ccortes_Marta_ponts.tsv  challenge-mock-data.json  config.json  contribute.json  docker-compose.yaml  dutch-sentences.tsv  emakhuwa-sentences.tsv  gulpfile.js  index.html  jest.config.js  l10n.toml  new-sentences-example.txt  newrelic_agent.log~40af5f44319c83681f714d5fd16a83e5c69bf9dd  (+9 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  stale.yml
_dev/: nginx.conf
android/: .gitignore  README.md  build.gradle  gradle.properties
bundler/: .dockerignore  .env.dist  .gitignore  DEVELOPER.md  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
bundler/uploader/: .gitignore  .pylintrc  DEVELOPER.md  README.md  pyproject.toml
bundler/uploader/src/mdc_disabler/: __init__.py  __main__.py  cli.py  client.py  config.py  constants.py  core.py  org_page.py
bundler/uploader/src/mdc_uploader/: __init__.py  __main__.py  cli.py  config.py  constants.py  gcs.py  language.py  log.py  mdc.py  models.py  naming.py  org_page.py  pipeline.py  prior.py  progress.py  state.py  streaming.py  typedef.py
bundler/uploader/tests/: conftest.py  test_config.py  test_disabler_cli.py  test_disabler_client.py  test_disabler_core.py  test_disabler_org_page.py  test_gcs.py  test_language.py  test_log.py  test_mdc.py  test_models.py  test_naming.py  test_org_page.py  test_pipeline.py  test_prior.py  test_progress.py  test_state.py  test_streaming.py
bundler/uploader/typings/datacollective/: __init__.pyi  api_utils.pyi  datasets.pyi  models.pyi  submissions.pyi  upload.pyi  upload_utils.pyi
client/: .jshintrc  app.html  index.html  index.ts  tsconfig.json
common/: README.md  challenge.ts  clips.ts  constants.ts  datasets.ts  feature.ts  goals.ts  language-stats.ts  language.ts  locale.ts  newsletters.ts  package.json  question.ts  sc-sentence.ts  sentences.ts  statistics.ts  takeout.ts  taxonomies.ts  tsconfig.json  types.ts  user-clients.ts  user_clients.ts  utility.ts
config/: webpack.config.js
(+14003 files in other folders)
